# nebula

./: .gitignore  Cargo.toml  Makefile  README.md  SETUP.md  TOOLING.md  idea.md  orders.wasm  rustfmt.toml  service.wat  start.sh  todo  wadm.yaml
components/gateway/: Cargo.toml  wkg.toml
components/gateway/src/: controller.rs  schema.rs
components/gateway/wit/: world.wit
components/inventory/: Makefile  composition.wac
components/inventory/config/: warehouses.json
components/inventory/database-engine/: Makefile
components/inventory/inventory-api/: Makefile
components/pricing/pricing-api/: Cargo.toml  (+1 more)
crates/http/: Cargo.toml
crates/otel/: Cargo.toml
demo/: Makefile  README.md  orders.wit  wkg.toml
demo/.wash/: config.yaml
demo/otel/: docker-compose-grafana.yml  docker-compose.yml
gateway/: Cargo.toml
gateway/src/: controller.rs  lib.rs  schema.rs
gateway/wit/: world.wit
inventory/: Makefile  composition.wac
inventory/database-engine/: Makefile
inventory/inventory-api/: Cargo.toml  wkg.toml
inventory/warehouse-engine/: Cargo.toml  Makefile  test.virt.wasm
inventory/wit/: inventory.wit
observability/: docker-compose-otel.yml
observability/wit/: tracing.wit
pricing/: Makefile  composition.wac
pricing/currency-engine/: Cargo.toml
pricing/tax-engine/: Cargo.toml  Makefile  wkg.toml
pricing/wit/: pricing.wit
simulation/: Cargo.toml
simulation/src/: hawkes.rs  main.rs  schema.rs
src/: main.rs
src/cli/: instrument.rs  mod.rs
wac/: composition.wac
wit/: nebula.wit
wit/wasi-otel/: tracing.wit  types.wit  world.wit
(+54 files in other folders)
