[package]
name = "nebula-simulator"
description = "Simulates real traffic to the distributed nebula wasm application."
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
point_process = "0.13.0"
